tests/ui/issues/issue-50264-inner-deref-trait/option-as_deref_mut.stderr
error[E0599]: the method `as_deref_mut` exists for enum `Option<{integer}>`, but its trait bounds were not satisfied
  --> $DIR/option-as_deref_mut.rs:2:33
   |
LL |     let _result = &mut Some(42).as_deref_mut();
   |                                 ^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `{integer}: Deref`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
