tests/ui/issues/issue-50264-inner-deref-trait/option-as_deref_mut.rs
fn main() {
    let _result = &mut Some(42).as_deref_mut();
//~^ ERROR the method
}
